--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,7 @@ and open the template in the editor.
 	<ul>
 	    <li>
 		<a href="lab1/calculatorinput.jsp">Simple Calculate Area W/Result on New Page</a>
+		<a href="lab2/calculator.jsp">Simple Calculate Area</a>
 	    </li>
 	</ul>
     </body>
