Initial calculator lab3

--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,10 @@ and open the template in the editor.
 	<ul>
 	    <li>
 		<a href="lab1/calculatorinput.jsp">Simple Calculate Area W/Result on New Page</a>
-		<a href="lab2/calculator.jsp">Simple Calculate Area</a>
+		<p> </p>
+		<a href="lab2/calculator.jsp">Simple Calculate Rectangle Area</a>
+		<p> </p>
+		<a href="lab3/calculator.jsp">Simple Calculate Area</a>
 	    </li>
 	</ul>
     </body>
