--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,8 @@ and open the template in the editor.
 		<a href="lab2/calculator.jsp">Simple Calculate Rectangle Area</a>
 		<p> </p>
 		<a href="lab3/calculator.jsp">Simple Calculate Area</a>
+		<p> </p>
+		<a href="lab4/calculator.jsp">Simple Calculate Area JSTL</a>
 	    </li>
 	</ul>
     </body>
